--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: Publish crate and create GitHub release
 
 on:
-  push:
-    tags:
-      - "v*"
+  workflow_run:
+    workflows: ["Auto-bump version and tag"]
+    types: [completed]
   workflow_dispatch:
 
 jobs:
@@ -24,23 +24,11 @@ jobs:
           rustc -V
           cargo -V
 
-      - name: Ensure tag matches Cargo.toml version
-        id: version_check
+      - name: Read Cargo.toml version
+        id: version
         run: |
-          TAG="${GITHUB_REF_NAME}"
-          # Expect tags like v0.1.2
-          if [[ ! "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "Tag $TAG must look like v0.1.2" >&2
-            exit 1
-          fi
-          TOML_VER=$(grep -m1 '^version\s*=\s*"' Cargo.toml | sed -E 's/.*"([^"]+)".*/\1/')
-          TAG_VER="${TAG#v}"
-          echo "Cargo.toml version: $TOML_VER"
-          echo "Tag version:       $TAG_VER"
-          if [ "$TOML_VER" != "$TAG_VER" ]; then
-            echo "Version mismatch: tag=$TAG_VER, Cargo.toml=$TOML_VER" >&2
-            exit 1
-          fi
+          VER=$(grep -m1 '^version\s*=\s*"' Cargo.toml | sed -E 's/.*"([^"]+)".*/\1/')
+          echo "version=$VER" >> $GITHUB_OUTPUT
 
       - name: Publish to crates.io
         env:
@@ -51,8 +39,8 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref_name }}
-          name: ${{ github.ref_name }}
+          tag_name: v${{ steps.version.outputs.version }}
+          name: v${{ steps.version.outputs.version }}
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
