--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,4 +43,9 @@ windows = { version = "0.58", features = [
 cocoa = "0.26"
 objc = "0.2"
 
+[profile.release]
+opt-level = "3"
+lto = "thin"
+codegen-units = 16
+
 [dev-dependencies]
