--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -15,3 +15,9 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
 anyhow = "1.0"
+
+[profile.release]
+strip = true
+opt-level = "s"
+lto = true
+codegen-units = 1
